flux/infrastructure/3dprinting/manyfold/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manyfold-db
  namespace: 3dprinting
  labels:
    app: manyfold-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manyfold-db
  template:
    metadata:
      labels:
        app: manyfold-db
    spec:
      nodeSelector:
        kubernetes.io/hostname: ip-192-168-100-11
      containers:
      - name: postgresql
        image: docker.io/library/postgres:17-alpine
        resources:
          limits:
            cpu: '1'
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 256Mi
        ports:
        - containerPort: 5432
          name: tcp-postgresql
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /var/lib/postgresql/data
        securityContext:
          capabilities:
            drop:
            - ALL
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: manyfold-config
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
        runAsGroup: 1000
        supplementalGroups:
        - 1000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manyfold-redis
  namespace: 3dprinting
  labels:
    app: manyfold-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manyfold-redis
  template:
    metadata:
      labels:
        app: manyfold-redis
    spec:
      containers:
      - name: redis
        image: docker.io/valkey/valkey:8-alpine
        resources:
          limits:
            cpu: '1'
            memory: 512Mi
          requests:
            cpu: 50m
            memory: 64Mi
        ports:
        - containerPort: 6379
          name: redis
          protocol: TCP
        securityContext:
          capabilities:
            drop:
            - ALL
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
        runAsGroup: 1000
        supplementalGroups:
        - 1000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manyfold
  namespace: 3dprinting
  labels:
    app: manyfold
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manyfold
  template:
    metadata:
      labels:
        app: manyfold
    spec:
      nodeSelector:
        kubernetes.io/hostname: ip-192-168-100-11
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 1000
        runAsNonRoot: false
        supplementalGroups:
        - 1000
      containers:
      - name: manyfold
        image: ghcr.io/manyfold3d/manyfold:0.109.0
        resources:
          limits:
            cpu: '2'
            memory: 4Gi
          requests:
            cpu: 250m
            memory: 512Mi
        ports:
        - containerPort: 3214
          name: http
          protocol: TCP
        volumeMounts:
        - name: libraries
          mountPath: /data/libraries
        - name: app-tmp
          mountPath: /usr/src/app/tmp
        - name: app-log
          mountPath: /usr/src/app/log
        securityContext:
          capabilities:
            drop:
            - ALL
      volumes:
      - name: libraries
        persistentVolumeClaim:
          claimName: manyfold-libraries
      - name: app-tmp
        emptyDir: {}
      - name: app-log
        emptyDir: {}
