flux/infrastructure/3dprinting/manyfold/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: manyfold-db
  namespace: 3dprinting
spec:
  selector:
    app: manyfold-db
  ports:
  - name: http
    port: 5432
    targetPort: 5432
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: manyfold-redis
  namespace: 3dprinting
spec:
  selector:
    app: manyfold-redis
  ports:
  - name: http
    port: 6379
    targetPort: 6379
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: manyfold
  namespace: 3dprinting
spec:
  selector:
    app: manyfold
  ports:
  - name: http
    port: 3214
    targetPort: 3214
  type: ClusterIP
