flux/infrastructure/3dprinting/manyfold/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: manyfold
  namespace: 3dprinting
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/middlewares: identity-sso-admin-chain@kubernetescrd
spec:
  tls:
  - hosts:
    - manyfold.becklab.cloud
    secretName: manyfold-tls
  rules:
  - host: manyfold.becklab.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: manyfold
            port:
              number: 3214
